# SDL2-GLAD-GLM-Triangles

./: .gitignore  CMakeLists.txt  README.md  main.cpp
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
